k8s/05-gitlab.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab-namespace
  labels:
    app: gitlab
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
        tier: frontend
    spec:
      containers:
        - image: gitlab/gitlab-ce:latest 
          name: gitlab
          ports:
            - name: registry
              containerPort: 5000
            - name: gitlab
              containerPort: 80
            - name: ssh
              containerPort: 22
          volumeMounts:
            - name: gitlab-data 
              mountPath: /var/opt/gitlab
            - name: gitlab-credentials 
              mountPath: /etc/gitlab
            - name: config
              mountPath: /etc/gitlab/gitlab.rb
              subPath: gitlab.rb      
      volumes:
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: gitlab-claim
        - name: gitlab-credentials
          persistentVolumeClaim:
            claimName: gitlab-credentials-claim
        - name: config
          secret:
            secretName: gitlab-secrets
      imagePullSecrets:
      - name: default-secret
