k8s/01-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
  namespace: gitlab-namespace
  labels:
    app: gitlab
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: gitlab
    tier: backend

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: gitlab-namespace
  labels:
    app: gitlab
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
        tier: backend
    spec:
      containers:
        - image: redis:3.2.12-alpine
          name: redis
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-persistent-storage
              mountPath: /var/lib/redis
            - name: tmp-volume 
              mountPath: /tmp
      volumes:
        - name: tmp-volume
          emptyDir: {}
        - name: redis-persistent-storage
          emptyDir: {}
