k8s/02-postgre.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: gitlab-namespace
  labels:
    app: gitlab
spec:
  ports:
    - port: 5432
  selector:
    app: gitlab
    tier: postgreSQL

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: gitlab-namespace
  labels:
    app: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
        tier: postgreSQL
    spec:
      containers:
        - image: postgres:9.6.2-alpine
          name: postgresql
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgresql
              mountPath: /var/lib/postgresql/data
              readOnly: false
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgres-claim
