k8s/03-gitlab.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-cluster-ip-service
  namespace: gitlab-namespace
  labels: 
    app: gitlab
spec:
  type: NodePort
  selector:
    app: gitlab
    tier: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31800  

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-registry-service
  namespace: gitlab-namespace
  labels:
    app: gitlab
spec:
  type: NodePort
  selector:
    app: gitlab
    tier: frontend
  ports:
  - name: registry
    protocol: TCP
    port: 4567 
    targetPort: 4567
    nodePort: 31700  

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab-namespace
  labels:
    app: gitlab
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
        tier: frontend
    spec:
      containers:
        - image: gitlab/gitlab-ce:latest 
          name: gitlab
          ports:
            - name: registry
              containerPort: 5000
            - name: gitlab
              containerPort: 80
            - name: ssh
              containerPort: 22
          volumeMounts:
            - name: gitlab-data 
              mountPath: /var/opt/gitlab
            - name: gitlab-credentials 
              mountPath: /etc/gitlab
            - name: config
              mountPath: /etc/gitlab/gitlab.rb
              subPath: gitlab.rb      
      volumes:
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: gitlab-claim
        - name: gitlab-credentials
          persistentVolumeClaim:
            claimName: gitlab-credentials-claim
        - name: config
          secret:
            secretName: gitlab-secrets
      imagePullSecrets:
      - name: default-secret
