k8s/03-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-cluster-ip-service
  namespace: gitlab-namespace
  labels: 
    app: gitlab
spec:
  type: NodePort
  selector:
    app: gitlab
    tier: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31800  

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-registry-service
  namespace: gitlab-namespace
  labels:
    app: gitlab
spec:
  type: NodePort
  selector:
    app: gitlab
    tier: frontend
  ports:
  - name: registry
    protocol: TCP
    port: 4567 
    targetPort: 4567
    nodePort: 31700
