k8s/05-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab-namespace
  labels:
    app: gitlab
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default    
spec:
  rules:
    - host: gitlab.<domino.com;br>
      http:
        paths:
          - backend:
              serviceName: gitlab-cluster-ip-service
              servicePort: 80
            path: /
    - host: registry.<domino.com;br
      http:
        paths:
          - backend:
              serviceName: gitlab-registry-service
              servicePort: 4567
            path: /
  tls:
    - hosts:
        - gitlab.<domino.com;br
        - registry.<domino.com;br
      secretName: traefik-cert
